--- a/style.css
+++ b/style.css
@@ -25,3 +25,11 @@ body {
 h1 {
   color: var(--cor-destaque);
 }
+
+button {
+  background-color: var(--cor-secundaria);
+  color: var(--cor-texto);
+  border: none;
+  border-radius: 15px;
+  padding: 15px;
+}
